Finishing adding the user POST approach and removing example person
